lines/bars support

--- a/main.html
+++ b/main.html
@@ -66,6 +66,23 @@
                 </dl>
             </div>
             <div id="plot-configuration">
+                <dl>
+                    <dt>Graph type:</dt>
+                    <dd>
+                        <select id="plot-type">
+                            <option value="lines">lines</option>
+                            <option value="bars">bars</option>
+                        </select>
+                    </dd>
+                    <dt>Graph units:</dt>
+                    <dd>
+                        <select id="plot-units">
+                            <option value="0">RSSI</option>
+                            <option value="1">dBm</option>
+                            <option value="2">mW</option>
+                        </select>
+                    </dd>
+                </dl>
             </div>
         </div>
     </body>
