overtime average support

--- a/main.html
+++ b/main.html
@@ -81,6 +81,8 @@
                             <option value="0.5">dBm</option>
                         </select>
                     </dd>
+                    <dt>Overtime Avr.:</dt>
+                    <dd class="t-right"><input type="checkbox" name="overtime-averaging" value="1"></dd>
                 </dl>
             </div>
         </div>
