averaged sample count indicator

--- a/main.html
+++ b/main.html
@@ -82,7 +82,10 @@
                         </select>
                     </dd>
                     <dt>Overtime Avr.:</dt>
-                    <dd class="t-right"><input type="checkbox" name="overtime-averaging" value="1"></dd>
+                    <dd class="t-right">
+                        <span class="overtime-averaging-counter">0</span>
+                        <input type="checkbox" name="overtime-averaging" value="1">
+                    </dd>
                 </dl>
             </div>
         </div>
