--- a/main.html
+++ b/main.html
@@ -88,6 +88,8 @@
                     </dd>
                 </dl>
             </div>
+            <div id="peak-detection">
+            </div>
         </div>
     </body>
 </html>             
