tooltips and pause and resume support

--- a/main.html
+++ b/main.html
@@ -89,7 +89,10 @@
                 </dl>
             </div>
             <div id="peak-detection">
+                <ul>
+                </ul>
             </div>
+            <a class="pause-resume pause" href="#" title="">Pause</a>
         </div>
     </body>
 </html>             
