port usage indicator

--- a/main.html
+++ b/main.html
@@ -38,7 +38,7 @@
                                 <option value="300">300</option>
                             </select>
                         </dd>
-                        <dt><dt><dd><a class="connect" href="#" title="">Connect</a></dd>
+                        <dt class="port-usage"><dt><dd><a class="connect" href="#" title="">Connect</a></dd>
                         <dt><dt><dd><a class="refresh" href="#" title="">Refresh</a>  </dd>
                     </dl>                  
                 </div>
@@ -57,6 +57,11 @@
                         <dt>Average samples:</dt>
                         <dd>
                             <select id="average-samples">
+                                <option value="1">1</option>
+                                <option value="5">5</option>
+                                <option value="10">10</option>
+                                <option value="25">25</option>
+                                <option value="50">50</option>
                             </select>
                         </dd>
                         <dt>Step size:</dt>
