pre-commit (will be following with new UI input)

--- a/main.html
+++ b/main.html
@@ -65,7 +65,7 @@
                                 <option value="50">50</option>
                             </select>
                         </dd>
-                        <dt>Step size:</dt>
+                        <dt>Step size (kHz):</dt>
                         <dd>
                             <select id="step-size">
                             </select>
