manual input for start & end frequencies

--- a/main.html
+++ b/main.html
@@ -47,13 +47,11 @@
                     <dl>
                         <dt>Start Frequency (MHz):</dt>
                         <dd>
-                            <select id="start-frequency">
-                            </select>
+                            <input id="start-frequency" type="text" />
                         </dd>
                         <dt>Stop Frequency (MHz):</dt>
                         <dd>
-                            <select id="stop-frequency">
-                            </select>
+                            <input id="stop-frequency" type="text" />
                         </dd>
                         <dt>Average samples:</dt>
                         <dd>
