--- a/main.html
+++ b/main.html
@@ -39,6 +39,22 @@
                                 <option value="300">300</option>
                             </select>
                         </dd>
+                        <dt>Delay:</dt>
+                        <dd>
+                            <select id="delay" title="Useful if you have DTR (RESET) pin connected.">
+                                <option value="0">0 sec.</option>
+                                <option value="1">1 sec.</option>
+                                <option value="2">2 sec.</option>
+                                <option value="3">3 sec.</option>
+                                <option value="4">4 sec.</option>
+                                <option value="5">5 sec.</option>
+                                <option value="6">6 sec.</option>
+                                <option value="7">7 sec.</option>
+                                <option value="8">8 sec.</option>
+                                <option value="9">9 sec.</option>
+                                <option value="10">10 sec.</option>
+                            </select>
+                        </dd>
                         <dt class="port-usage"><dt><dd><a class="connect" href="#" title="">Connect</a></dd>
                         <dt><dt><dd><a class="refresh" href="#" title="">Refresh</a>  </dd>
                     </dl>                  
